# NoteEnglish

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  WORKFLOW.md  render.yaml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: auth.py  config.py
backend/app/models/: issue_report.py  link_preview.py  ocr.py  parse.py  profile.py  quiz.py  session.py  share.py  translate.py  tts.py  vocab.py
backend/app/routes/: admin.py  issue_report.py  link_preview.py  ocr.py  parse.py  profile.py  quiz.py  session.py  share.py  test.py  translate.py  tts.py  usage.py  vocab.py
backend/app/services/: gemini.py  link_preview.py  mailer.py  nlp.py  structure.py  supabase.py  tts.py  vocab_cache.py
backend/tests/: test_gemini_reparse.py  test_link_preview.py  test_parse_golden.py  test_parse_route.py  test_profile_route.py  test_quiz_route.py  test_share_route.py  test_structure.py  test_supabase_request.py  test_text_processing.py  test_tts_route.py  test_usage_stats.py  test_word_mastery.py
docs/: mobile-multiword-selection-plan.md  rich-note-editor-plan.md  sentence-structure-plan.md  sentence-structure.html  session-title-ux-plan.md  share-feature-plan.md  user-profile-plan.md
frontend/: CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  probe2.cjs  tsconfig.json  vite.config.js
frontend/src/: App.jsx  App.tsx  ThemedApp.tsx  index.css  main.tsx  types.ts
supabase/migrations/: 20260603000000_add_vocab_notes_other_fields.sql  20260603000001_create_api_usage.sql  (+8 more)
(+122 files in other folders)
